# hyperchain

./: LICENSE  README.md  pyproject.toml
assets/: design-philosophy.md
dashboard/: index.html
docs/: anti-patterns.md
landing/: index.html
src/hyperchain/: __init__.py  agent.py  audit_chain.py  cli.py  errors.py  guards.py  negotiation.py  pipeline.py  state_machine.py
src/hyperchain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_agent.py  test_audit_chain.py  test_cli.py  test_guards.py  test_integration.py  test_negotiation.py  test_pipeline.py  test_state_machine.py
